--- a/IT20621292_Spam_Mail_Predictor.ipynb
+++ b/IT20621292_Spam_Mail_Predictor.ipynb
@@ -240,6 +240,36 @@
     {
       "cell_type": "code",
       "source": [
+        "#Check Null Values\n",
+        "\n",
+        "Data.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Q941kddGC87",
+        "outputId": "f29d3229-e2aa-4f49-da51-c37622cb4ee3"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Label        0\n",
+              "EmailText    0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "Data.describe()"
       ],
       "metadata": {
