--- a/IT20621292_Spam_Mail_Predictor.ipynb
+++ b/IT20621292_Spam_Mail_Predictor.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 75,
       "metadata": {
         "id": "EX-tsJZ5vXJK"
       },
@@ -33,13 +33,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# dataset\n",
+        "# Dataset\n",
         "Data = pd.read_csv('/content/sample_data/spam.csv')"
       ],
       "metadata": {
         "id": "eBwUEJ_Ty9nG"
       },
-      "execution_count": 52,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -53,9 +53,9 @@
           "height": 206
         },
         "id": "VLD2ckSmzi_j",
-        "outputId": "ee0a0710-0656-4c74-944b-3c07e2e0d907"
+        "outputId": "41a56c2c-8937-48c0-a42f-305604aa7bf2"
       },
-      "execution_count": 53,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,7 +70,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6b26f2b2-aca8-4ac1-8b76-92709f3ed9ed\">\n",
+              "  <div id=\"df-363cbf1e-cbfe-4fa0-ba81-dac3e99194ca\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -123,7 +123,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b26f2b2-aca8-4ac1-8b76-92709f3ed9ed')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-363cbf1e-cbfe-4fa0-ba81-dac3e99194ca')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -174,12 +174,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6b26f2b2-aca8-4ac1-8b76-92709f3ed9ed button.colab-df-convert');\n",
+              "          document.querySelector('#df-363cbf1e-cbfe-4fa0-ba81-dac3e99194ca button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6b26f2b2-aca8-4ac1-8b76-92709f3ed9ed');\n",
+              "          const element = document.querySelector('#df-363cbf1e-cbfe-4fa0-ba81-dac3e99194ca');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -202,19 +202,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 77
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "Data=Data.replace({'Label'   :  {'spam':1,'ham':0}})"
+        "Data=Data.replace({'Label': {'spam':1,'ham':0}})"
       ],
       "metadata": {
         "id": "YwEYuKOSe6k1"
       },
-      "execution_count": 54,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -223,14 +223,14 @@
         "Data.head()"
       ],
       "metadata": {
-        "id": "Xgcr3shzfYv8",
-        "outputId": "6962448d-1c83-4e50-8683-f09c3d0f3476",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "Xgcr3shzfYv8",
+        "outputId": "8edc9ffe-b8f6-43a7-94c9-291809e31a05"
       },
-      "execution_count": 55,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e7a5a900-b187-4d46-9deb-2c17e543e332\">\n",
+              "  <div id=\"df-9aa82237-6001-4b00-9c8d-14f8ec85031e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -298,7 +298,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e7a5a900-b187-4d46-9deb-2c17e543e332')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9aa82237-6001-4b00-9c8d-14f8ec85031e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -349,12 +349,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e7a5a900-b187-4d46-9deb-2c17e543e332 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9aa82237-6001-4b00-9c8d-14f8ec85031e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e7a5a900-b187-4d46-9deb-2c17e543e332');\n",
+              "          const element = document.querySelector('#df-9aa82237-6001-4b00-9c8d-14f8ec85031e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 79
         }
       ]
     },
@@ -391,9 +391,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RJYFQlWXz1ag",
-        "outputId": "efce6da4-858d-40c9-f6a0-30949568709f"
+        "outputId": "40e48a11-a2a8-44a5-c02d-e1bea4f8eb9b"
       },
-      "execution_count": 56,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,9 +424,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Q941kddGC87",
-        "outputId": "8e41e170-062a-4c93-c2d4-5a95c1b2e869"
+        "outputId": "df6d3f44-1635-4fd9-9884-1efdc61ca401"
       },
-      "execution_count": 57,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +438,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 81
         }
       ]
     },
@@ -453,9 +453,9 @@
           "height": 300
         },
         "id": "-X-YzIRlB21f",
-        "outputId": "8503480e-674e-420f-e58f-bf42da078494"
+        "outputId": "62fff27b-b2da-4f9e-8c3e-d0a91d0eb4a8"
       },
-      "execution_count": 58,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-948bcffb-fd7c-42b2-8b09-986fa7364467\">\n",
+              "  <div id=\"df-15d8eb13-dde7-43d0-88da-339780b28339\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -532,7 +532,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-948bcffb-fd7c-42b2-8b09-986fa7364467')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-15d8eb13-dde7-43d0-88da-339780b28339')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -583,12 +583,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-948bcffb-fd7c-42b2-8b09-986fa7364467 button.colab-df-convert');\n",
+              "          document.querySelector('#df-15d8eb13-dde7-43d0-88da-339780b28339 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-948bcffb-fd7c-42b2-8b09-986fa7364467');\n",
+              "          const element = document.querySelector('#df-15d8eb13-dde7-43d0-88da-339780b28339');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -611,7 +611,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 82
         }
       ]
     },
@@ -626,22 +626,22 @@
       "metadata": {
         "id": "PvY8n-Sn2nbp"
       },
-      "execution_count": 59,
+      "execution_count": 83,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "Data['Label'].value_counts()"
+        "Data['Label'].value_counts()  #Acording to the output this data set is imbalanced dataset"
       ],
       "metadata": {
-        "id": "KNNFRp19UiMH",
-        "outputId": "e06c6c9c-056d-4007-a5a8-349c153403cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KNNFRp19UiMH",
+        "outputId": "622e4ce4-06a7-42c9-90cb-a7ab546fc958"
       },
-      "execution_count": 60,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,33 +653,35 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 84
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "#Converting text(EmailText) into integer using CountVectorizer()\n",
+        "\n",
         "CountVectorizer = CountVectorizer() \n",
         "X_new = CountVectorizer.fit_transform(X)"
       ],
       "metadata": {
         "id": "ZLi-tYQtgQ6b"
       },
-      "execution_count": 61,
+      "execution_count": 85,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#this data set is imbalnced ,so we can use SMOTE to balced the data set\n",
+        "#This data set is imbalnced ,so we can use SMOTE to balanced the data set\n",
         "from imblearn.over_sampling import SMOTE\n",
         "smote=SMOTE()"
       ],
       "metadata": {
         "id": "YJX5RN-nWrUc"
       },
-      "execution_count": 62,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -690,7 +692,7 @@
       "metadata": {
         "id": "8y8-RYY3ZMl7"
       },
-      "execution_count": 63,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -703,7 +705,7 @@
       "metadata": {
         "id": "15Fz6ckj7FYq"
       },
-      "execution_count": 65,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -720,9 +722,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OxBZxfAu9QbN",
-        "outputId": "0686e73f-b52b-4dae-bc60-a8ecfc402ca5"
+        "outputId": "edc457a1-80e1-48a1-da27-40df7000f83a"
       },
-      "execution_count": 72,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -732,7 +734,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 89
         }
       ]
     },
@@ -748,15 +750,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8yAoCKd_9nNA",
-        "outputId": "b70b7388-2a81-41c0-c4bb-154045780500"
+        "outputId": "e6dd5b21-ac52-430f-d380-d9cc5751b07e"
       },
-      "execution_count": 73,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.9533678756476683\n"
+            "0.9564766839378238\n"
           ]
         }
       ]
@@ -764,30 +766,33 @@
     {
       "cell_type": "code",
       "source": [
-        "input_mail = [\n",
-        "\"Hey, you have won a car !!!!. Conrgratzz\",\n",
-        "\"Dear applicant, Your CV has been recieved. Best regards\",\n",
-        "\"You have received $1000000 to your account\",\n",
-        "\"Join with our whatsapp group\",\n",
+        "#Get the Given Mails\n",
+        "\n",
+        "Given_mails = [\n",
+        "\"Hey, you have won a car !!!!. Conrgratzz\",\"Dear applicant, Your CV has been recieved. Best regards\",\"You have received $1000000 to your account\",\"Join with our whatsapp group\",\n",
         "\"Kindly check the previous email. Kind Regards\"\n",
         "]\n",
         "\n",
+        "Emails = CountVectorizer.transform(Given_mails)\n",
         "\n",
-        "Mails = CountVectorizer.transform(input_mail)\n",
+        "#Using the Model Check whether Given Emails Spam or not\n",
         "\n",
-        "# making prediction\n",
+        "prediction_value = Model.predict(Emails)\n",
+        "print(prediction_value)\n",
         "\n",
-        "prediction = Model.predict(Mails)\n",
-        "print(prediction)"
+        "#1 for 'Spam email'\n",
+        "#0 for 'ham email'\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "NU5L7E_S7EaB",
-        "outputId": "caa62e90-34b7-4278-d78d-a1792a8c893d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b2c539a0-fb5d-4e94-9756-8673a9a08c68"
       },
-      "execution_count": 74,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
