--- a/IT20621292_Spam_Mail_Predictor.ipynb
+++ b/IT20621292_Spam_Mail_Predictor.ipynb
@@ -783,6 +783,11 @@
         "#1 for 'Spam email'\n",
         "#0 for 'ham email'\n",
         "\n",
+        "for i in prediction_value:\n",
+        "    if (i == 1):\n",
+        "      print('spam mail')\n",
+        "    else:\n",
+        "      print('ham mail')\n",
         "\n"
       ],
       "metadata": {
@@ -790,15 +795,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2c539a0-fb5d-4e94-9756-8673a9a08c68"
+        "outputId": "abdf893b-78c3-431a-d3ae-c33a3556c679"
       },
-      "execution_count": 91,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1 0 1 1 0]\n"
+            "[1 0 1 1 0]\n",
+            "spam mail\n",
+            "ham mail\n",
+            "spam mail\n",
+            "spam mail\n",
+            "ham mail\n"
           ]
         }
       ]
